Modulo Requisitos y Correquisitos 90%

--- a/ProyectoPOO/src/vista/FrmMenu.form
+++ b/ProyectoPOO/src/vista/FrmMenu.form
@@ -31,7 +31,7 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
-                      <Component id="btnAsigarRequisitos" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnAsignarRequisitos" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
@@ -57,7 +57,7 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="btnRegistrarCurso" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
-              <Component id="btnAsigarRequisitos" min="-2" max="-2" attributes="0"/>
+              <Component id="btnAsignarRequisitos" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="btnRgistrarPlanes" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -86,7 +86,7 @@
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JButton" name="btnAsigarRequisitos">
+    <Component class="javax.swing.JButton" name="btnAsignarRequisitos">
       <Properties>
         <Property name="text" type="java.lang.String" value="Asignar Requisitos y Correquisitos"/>
       </Properties>
